pkl-core/src/test/files/LanguageSnippetTests/input/errors/const/constQualified.pkl
local notConstDyn = new Dynamic {
  prop = 2
}

class Foo {
  foo = notConstDyn.prop
}

foo = new Foo {}
